[package]
name = "bevy_seedling"
version = "0.6.1"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
authors = ["Corvus Prudens <corvusprudens@gmail.com>"]
description = "A sprouting integration of the Firewheel audio engine"
readme = "README.md"
repository = "https://github.com/corvusprudens/bevy_seedling"
documentation = "https://docs.rs/bevy_seedling"
keywords = ["gamedev", "audio", "bevy", "firewheel"]
categories = ["game-development", "multimedia::audio"]
exclude = ["/assets"]

[features]
default = ["stream", "wav", "ogg", "rand", "loudness", "reflect"]
stream = ["firewheel/stream_nodes"]
rand = ["dep:rand"]
loudness = ["dep:ebur128", "dep:portable-atomic"]
reflect = ["firewheel/bevy_reflect", "firewheel-ircam-hrtf?/bevy_reflect"]
web_audio = ["dep:firewheel-web-audio"]

hrtf = ["dep:firewheel-ircam-hrtf"]
# embed all HRTF subjects
hrtf_subjects = ["firewheel-ircam-hrtf?/all_subjects"]

# formats
wav = ["symphonium/wav", "symphonium/pcm"]
ogg = ["symphonium/ogg", "symphonium/vorbis"]
flac = ["symphonium/flac"]
mkv = ["symphonium/mkv"]

# codecs
mp3 = ["symphonium/mp3"]
adpcm = ["symphonium/adpcm"]

# Enables profiling and testing backend compilation.
# This is mainly intended for internal use.
profiling = []

[dependencies]
bevy_ecs = {  path = "../../bevy_engine/crates/bevy_ecs", default-features = false }
bevy_app = {  path = "../../bevy_engine/crates/bevy_app", default-features = false }
bevy_math = { path = "../../bevy_engine/crates/bevy_math", default-features = false, features = [
  "curve",
  "std",
] }
bevy_asset = { path = "../../bevy_engine/crates/bevy_asset", default-features = false }
bevy_transform = { path = "../../bevy_engine/crates/bevy_transform", default-features = false, features = ["bevy-support"] }
bevy_log = { path = "../../bevy_engine/crates/bevy_log", default-features = false }
bevy_platform = { path = "../../bevy_engine/crates/bevy_platform", default-features = false, features = ["alloc"] }
bevy_time = { path = "../../bevy_engine/crates/bevy_time", default-features = false }
bevy_reflect = { path = "../../bevy_engine/crates/bevy_reflect", default-features = false, features = [
  "glam",
] }

firewheel = { path = "../Firewheel", features = [
  "bevy",
  "spatial_basic_node",
  "scheduled_events",
  "musical_transport",
  "glam-30",
  "freeverb_node",
] }
symphonium = { version = "0.6", default-features = false, features = [
  "opt-simd",
  "fft-resampler",
] }
symphonia = { version = "0.5", default-features = false }
smallvec = { version = "1.13", default-features = false }
bevy_seedling_macros = { path = "./seedling_macros", version = "0.6.0" }
rand = { version = "0.9", default-features = false, features = [
  "small_rng",
  "os_rng",
], optional = true }
ebur128 = { version = "0.1.10", optional = true }
portable-atomic = { version = "1.11", optional = true, features = ["float"] }
firewheel-ircam-hrtf = { path = "../firewheel-ircam-hrtf", optional = true, features = [
  "bevy",
] }
firewheel-web-audio = { version = "0.3.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
firewheel = { path = "../Firewheel", features = ["wasm-bindgen"] }

[dev-dependencies]
bevy_seedling = { path = ".", features = ["hrtf"] }
bevy = { path = "../../bevy_engine", default-features = false, features = [
  "bevy_debug_stepping",
  "bevy_asset",
  "bevy_state",
  "multi_threaded",
  "sysinfo_plugin",
  "std",
  "bevy_log",
  "bevy_core_pipeline",
  # for examples with ui
  "bevy_text",
  "default_font",
  "bevy_ui",
  "bevy_ui_render",
  "bevy_picking",
  "bevy_ui_picking_backend",
  "bevy_window",
  "bevy_render",
  "wayland",
  "x11",
] }
criterion = { version = "0.5", default-features = false, features = [
  "plotters",
  "cargo_bench_support",
] }

[[bench]]
name = "basic"
harness = false
required-features = ["profiling"]

[package.metadata.docs.rs]
all-features = true
